--- a/xi.ipynb
+++ b/xi.ipynb
@@ -11,6 +11,9 @@
     "import numpy as np\n",
     "from astropy import cosmology\n",
     "from scipy.interpolate import UnivariateSpline\n",
+    "def woef():\n",
+    "    print('blaf')\n",
+    "\n",
     "def Hubble_evolution(z):\n",
     "    return np.sqrt(cosmology.Planck18.Om0*(1.+z)**3. + cosmology.Planck15.Ode0)\n",
     "\n",
