--- a/Extrapolation.ipynb
+++ b/Extrapolation.ipynb
@@ -7036,12 +7036,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27209593",
+   "cell_type": "markdown",
+   "id": "22920fbe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Under revision\n"
+   ]
   },
   {
    "cell_type": "code",
