--- a/Extrapolation.ipynb
+++ b/Extrapolation.ipynb
@@ -6504,8 +6504,8 @@
     "from astropy.constants import iau2012 as const\n",
     "import astropy.units as u\n",
     "from astropy.coordinates import Angle\n",
-    "from ipynb.fs.full.DataframeGOALS import *\n",
-    "from ipynb.fs.full.xi import *\n"
+    "from ipynb.fs.full.Dataframe_GOALS import *\n",
+    "from ipynb.fs.full.Xi import *\n"
    ]
   },
   {
@@ -6515,8 +6515,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HerschelChu_201 = np.loadtxt(\"HerschelChu.txt\")\n",
-    "names_Chu = np.loadtxt('names.txt',dtype ='str')\n",
+    "HerschelChu_201 = np.loadtxt(\"Herschel_Chu.txt\")\n",
+    "names_Chu = np.loadtxt('Names.txt',dtype ='str')\n",
     "DAsystem = np.array([i[1] for i in HerschelChu_201])\n",
     "LIRsystem = np.array([i[3] for i in HerschelChu_201])\n",
     "df_system = pd.DataFrame({ 'Optical name' : [i[1] for i in names_Chu],\n",
@@ -7033,6 +7033,22 @@
     "plt.grid()\n",
     "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/PredictionVSobs.png\",bbox_inches=\"tight\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba224112",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bb2b132",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
