Cleaned some files

--- a/Completeness_folder/Completeness.ipynb
+++ b/Completeness_folder/Completeness.ipynb
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc73806b7c0>"
+       "<matplotlib.legend.Legend at 0x7fcf908ad760>"
       ]
      },
      "execution_count": 4,
@@ -175,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc7503de3a0>"
+       "<matplotlib.legend.Legend at 0x7fcf70344250>"
       ]
      },
      "execution_count": 6,
@@ -283,6 +283,14 @@
    "source": [
     "z_at_value(Planck18.luminosity_distance,75*u.Mpc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e305fd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
