--- a/Extrapolation.ipynb
+++ b/Extrapolation.ipynb
@@ -6054,7 +6054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.Diffuse_IceCube_data import *\n"
+    "from ipynb.fs.full.Diffuse_IceCube_nb import *\n"
    ]
   },
   {
@@ -6525,22 +6525,6 @@
     "plt.grid()\n",
     "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/PredictionVSobs.png\",bbox_inches=\"tight\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ea4eb30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08d82e84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
