updated ccalibration factor

--- a/Dataframe_GOALS.ipynb
+++ b/Dataframe_GOALS.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b5bfdd77",
    "metadata": {},
    "outputs": [],
@@ -163,9 +163,19 @@
     "    if calib == \"Murphy\":\n",
     "        return (1/86.3)*3.88e-44*LIR*1e7*3.828e26\n",
     "    elif calib == \"Yarno NK\":\n",
-    "        return 5.428172e-46*LIR*1e7*3.828e26 \n",
+    "        #return 5.428172e-46*LIR*1e7*3.828e26\n",
+    "        return 5.973941e-46*LIR*1e7*3.828e26 \n",
+    "\n",
     "    elif calib == \"Yarno TH\":\n",
     "        return 4.151310e-46*LIR*1e7*3.828e26\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67893505",
+   "metadata": {},
+   "source": [
+    "Important note: The commented calibration factor under \"Yarno NK\" assumes a non-standard SB99 simulation parameter. Specifically, the commented calibration factor takes into account that black holes are already formed from 40 stellar masses. The one that is used for further calculations takes the standard SB99 parameters."
    ]
   },
   {
@@ -231,6 +241,14 @@
     "    chars[i].insert(3,l[i][3])\n",
     "    chars[i].insert(4,l2[i][0])\n",
     "    chars[i].insert(5,l2[i][1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9ce3c75",
+   "metadata": {},
+   "source": [
+    "Note: for the extrapolation we assume G=1."
    ]
   },
   {
