update after a while

--- a/Extrapolation.ipynb
+++ b/Extrapolation.ipynb
@@ -6392,7 +6392,7 @@
     "ax[0].grid()\n",
     "ax[1].grid()\n",
     "\n",
-    "#plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/Hz_evolution.png\",bbox_inches=\"tight\")\n"
+    "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/xivsgamma.png\",bbox_inches=\"tight\")\n"
    ]
   },
   {
@@ -6736,7 +6736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "7fff3f0b",
    "metadata": {},
    "outputs": [
@@ -6808,12 +6808,13 @@
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.legend(fontsize = 15)\n",
-    "plt.grid()\n"
+    "plt.grid()\n",
+    "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/fit.png\",bbox_inches=\"tight\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "f2801327",
    "metadata": {},
    "outputs": [
@@ -6838,7 +6839,8 @@
     "plt.xticks(fontsize = 15)\n",
     "plt.yticks(fontsize = 15)\n",
     "plt.legend(fontsize = 12)\n",
-    "plt.yscale('log')"
+    "plt.yscale('log')\n",
+    "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/etatotvsfpp.png\",bbox_inches=\"tight\")\n"
    ]
   },
   {
