--- a/Completeness_folder/Completeness.ipynb
+++ b/Completeness_folder/Completeness.ipynb
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcf908ad760>"
+       "<matplotlib.legend.Legend at 0x7f98ba7e2700>"
       ]
      },
      "execution_count": 4,
@@ -163,7 +163,7 @@
     "plt.xlabel('$\\log_{10}(F_{\\mathrm{IR}})$ [$W$ m$^{-2}$]', fontsize = 15)\n",
     "plt.ylabel('$\\log_{10}(S_{60\\mu\\mathrm{m},\\mathrm{IRAS}})$ [Jy]', fontsize = 15)\n",
     "plt.legend(fontsize = 12)\n",
-    "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/Fit\",bbox_inches=\"tight\")\n"
+    "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/completenessfit\",bbox_inches=\"tight\")\n"
    ]
   },
   {
@@ -175,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcf70344250>"
+       "<matplotlib.legend.Legend at 0x7f98a8a17a00>"
       ]
      },
      "execution_count": 6,
@@ -288,6 +288,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0e305fd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae749c3b",
    "metadata": {},
    "outputs": [],
    "source": []
