Cleanup and Diffuse LIRG plot

--- a/Completeness_folder_lirgs/Completeness.ipynb
+++ b/Completeness_folder_lirgs/Completeness.ipynb
@@ -163,7 +163,7 @@
     "plt.xlabel('$\\log_{10}(F_{\\mathrm{IR}})$ [$W$ m$^{-2}$]', fontsize = 15)\n",
     "plt.ylabel('$\\log_{10}(S_{60\\mu\\mathrm{m},\\mathrm{IRAS}})$ [Jy]', fontsize = 15)\n",
     "plt.legend(fontsize = 12)\n",
-    "plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/completenessfit\",bbox_inches=\"tight\")\n"
+    "#plt.savefig(\"/Users/yarno/Documents/PhD/Pictures/Extrapolation_plots/completenessfit\",bbox_inches=\"tight\")\n"
    ]
   },
   {
@@ -283,22 +283,6 @@
    "source": [
     "z_at_value(Planck18.luminosity_distance,75*u.Mpc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e305fd7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae749c3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
