--- a/LIRGs/diffuse_lirg_prediction.ipynb
+++ b/LIRGs/diffuse_lirg_prediction.ipynb
@@ -455,7 +455,9 @@
    "source": [
     "\\begin{equation}\n",
     "    E^{2}_{\\nu_{}}\\Phi_{\\nu_i} \\approx \\frac{1}{3}\\frac{c}{4\\pi} t_{H} \\xi_{z}\\frac{3K}{4(1+K)} \\min[1,f_{\\mathrm{pp}/p\\gamma}] \\left(E_{\\mathrm{CR}}\\mathcal{Q}_{E_\\mathrm{CR}}\\right)~.\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "In this work we assume that the differential energy generation rate of IR and CR are related by a constant factor. "
    ]
   },
   {
